Revert "fix: corrigir protecao swagger e ordem auth"
This reverts commit c69e56579360b15877b5eab9c4918526a3ca9122.
